# ebac_bookstore

./: Dockerfile
.github/workflows/: build.yml  fly-deploy.yml  github-actions-demo.yml  workflow-pr.yml
bookstore/: Dockerfile  db.sqlite3  docker-compose.yml  fly.toml  pyproject.toml
bookstore/.github/workflows/: github-actions-demo.yml
bookstore/bookstore/: settings.py  urls.py  views.py
bookstore/order/: factories.py
bookstore/order/migrations/: 0001_initial.py
bookstore/order/models/: order.py
bookstore/order/serializers/: order_serializer.py
bookstore/order/tests/test_viewset/: test_order_serializer.py  test_order_viewset.py
bookstore/order/viewsets/: order_viewset.py
bookstore/product/: factories.py  tests_models.py  tests_serializers.py  urls.py
bookstore/product/migrations/: 0001_initial.py  0002_product_active.py
bookstore/product/models/: category.py  product.py  supplier.py
bookstore/product/serializers/: __init__.py  category_serializer.py  product_serializer.py  supplier_serializer.py
bookstore/product/tests/test_serializer/: test_category_serializer.py  test_product_serializer.py
bookstore/product/tests/test_viewset/: test_category_viewset.py  test_product_viewset.py
bookstore/product/viewsets/: __init__.py  category_viewset.py  product_viewset.py  supplier_viewset.py
